fix scrollbar timesheet add event e timesheet add trasf

--- a/src/app/modules/timesheet/components/timesheet-add-event/timesheet-add-event.component.css
+++ b/src/app/modules/timesheet/components/timesheet-add-event/timesheet-add-event.component.css
@@ -7,3 +7,8 @@ ng-select.error{
 .is-readonly{
     background-color: rgb(238, 238, 238);
 }
+
+::ng-deep .mat-dialog-container {
+    overflow: visible !important;
+}
+
